wip: fix threshold display
